--- a/style.css
+++ b/style.css
@@ -182,6 +182,7 @@ ul li{
   transition: 0.3s ease-out;
   border-radius: 10px;
   position: relative;
+  list-style: circle;
 }
 
 
@@ -351,6 +352,8 @@ body.light #goal-widget {
   padding: 0; /* bardzo ważne */
   margin: 0;
   transition: height 0.35s ease, opacity 0.25s ease, padding 0.25s ease;
+  display: flex;
+  flex-direction: column;
 }
 
 #transaction-list.open {
@@ -358,15 +361,27 @@ body.light #goal-widget {
   padding: 5px 0; /* przy otwarciu */
 }
 
+
+
 /* Ikona */
 .transaction-header i {
   cursor: pointer;
-  margin-top: 7px;
-  transition: transform 0.35s ease;
+  margin-top: 4px;
+  transition: 0.35s ease;
+  background-color: rgba(75, 75, 75, 0.479);
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #cccccc6b;
 }
 
 .transaction-header i.rotate {
   transform: rotate(180deg);
+  border: 1px solid #ccc;
+  background-color: rgb(75, 75, 75);
 }
 
 .transaction-header{
